--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2642,107 +2642,107 @@ stories:
   domain: http://www.timeswv.com/
   link: https://www.timeswv.com/news/three-ways-inn-destroyed-by-fire/article_cdd89a9c-9d44-11e9-a1fb-07bad498312f.html
 images:
-- name: old-church-oldchurch-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-far-away.jpg
-- name: eduardo-eduardo-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-yellow-collage.jpg
-- name: mediterranean-mediterranean-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-far-away.jpg
-- name: legal-statue-legalstatue-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-far-away.jpg
-- name: bluelake-gred-mash-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-01-17-38.jpg
-- name: downtheline-downtheline-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-missle.jpg
-- name: adam-smith-adam-smith-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-rainbow-festival.jpg
-- name: gears-4882162452-fa3126b38d-b-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-mucha-mult.jpg
-- name: stories-art-museum-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-art-museum-dark-dali.jpg
-- name: supreme-court-supremecourt-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crunch-paper.jpg
-- name: meadowbutterfly-meadow-butterfly-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-plentiful.jpg
-- name: status-berlin-status-berlin-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-dali.jpg
-- name: gypsy-wagon-gypsywagon-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-satan-red.jpg
-- name: stories-new-oldbarn-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-oldbarn-dark-dali.jpg
-- name: server-cloud-server-racks-door-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-far-away.jpg
-- name: carry-load-carryload-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-wols.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-clean-view.jpg
-- name: amusement-park-amusement-park-2-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-spagetti-accident.jpg
-- name: fence-mexico-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-light-dali.jpg
-- name: aws-s3-stories-downtown-fredericksburg-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-downtown-fredericksburg-nazi-poster.JPG
-- name: curtain-curtain-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-green-zuma.jpg
-- name: abandonedbuildings_purple_pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purple_pond.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
-- name: abe-lincoln-one-satan-red-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-00-00.jpg
-- name: oldcabin-store-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-matrix.jpg
-- name: stories-new-52-175-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-52-175-800-500-0-max-0-1--1.jpg
-- name: aws-s3-stories-downtown-fredericksburg-china-prop.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-downtown-fredericksburg-china-prop.JPG
-- name: oldbarn-oldbarn-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-hot-spicy.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
-- name: san-francisco-street-view-san-francisco-street-view-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-attack-planes.jpg
-- name: death-valley-death-valley-national-park-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-electricity.jpg
-- name: legal-statue-legalstatue-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-three.jpg
-- name: store-on-corner-store-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crabapple.jpg
-- name: fence-mexico-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-dresden.jpg
-- name: fence-mexico-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-marcel-duchamp.jpg
-- name: wave-DSC_0087.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0087.jpg
-- name: eduardo-eduardo-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-smooth-ride.jpg
-- name: powerlines-power-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-wols.jpg
-- name: oldhouse-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-circuit.jpg
-- name: eduardo-eduardo-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dry-skin.jpg
-- name: white-house-lawn-white-house-lawn-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-neo-instinct.jpg
-- name: containership-containership-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-alien-goggles.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
-- name: legal-statue-legalstatue-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-smoking-cigarette.jpg
-- name: nyc-flag-nycflag-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-graham-sutherland.jpg
-- name: crow_kand_two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kand_two.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
-- name: meadowbutterfly-meadow-butterfly-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-wols.jpg
-- name: crow-crow-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-constitution.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-aqua.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
+- name: stories-new-80-140-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-80-140-800-500-0-max-0--5--5.jpg
+- name: crow-crow-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-creativity.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-purp-paper.jpg
+- name: school-clouds-church-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit.jpg
+- name: powerlines-power-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-diego-rivera1.jpg
+- name: docks-docks-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-copper-circuit-2.jpg
+- name: locked-up-steam-lock-up-steam-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-sand-paper.jpg
+- name: capital-battle-capitolbattle-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crafty-painting.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
+- name: power-lines-power-lines-empty-space-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit.jpg
+- name: white-house-lawn-white-house-window-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-circuit.jpg
+- name: abe-lincoln-one-yellow-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-07-91.jpg
+- name: oldsmallboat-oldsmallboat-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-creativity.jpg
+- name: statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
+- name: oldhouse-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-hot-spicy.jpg
+- name: birdhouse-birdhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-missle.jpg
+- name: beach-rocks-beach-rocks-currents-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-green-zuma.jpg
+- name: crow_smoking_cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smoking_cigarette.jpg
+- name: white-house-lawn-white-house-lawn-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-gan-vogh.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-brush.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-brush.png
+- name: soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
+- name: old-school-house-old-schoolhouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-space-pizza.jpg
+- name: hollywood-building-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-marcel-duchamp.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-space-pizza.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-space-pizza.JPG
+- name: dragon_close-up-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-nazi-invasion.jpg
+- name: aws-s3-stories-new-machine-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-atari-missle.jpg
+- name: castle-wall-DSC-0067-mucha-mult.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-mucha-mult.JPG
+- name: aws-s3-stories-containership-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
+- name: legal-statue-legalstatue-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-marcel-duchamp.jpg
+- name: catacombs-catacombs-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-marcel-duchamp.jpg
+- name: amusement-park-amusement-park-2-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-umberto-bocc.jpg
+- name: razorcliff-razorcliff-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-wols.jpg
+- name: ellis-island-ellis-island-room-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-alien-goggles.jpg
+- name: oldhouse-granaryfield-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-spagetti-accident.jpg
+- name: stories-statue-face-open-mouth-blue-circuit-5.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-blue-circuit-5.png
+- name: adam-smith-adam-smith-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-rain.jpg
+- name: oldroad-old-road-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dry-skin.jpg
+- name: downtheline-downtheline-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-pond.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+- name: ellis-island-ellisisland-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gred-mash.jpg
+- name: capital-battle-capitolbattle-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-space-pizza.jpg
+- name: bluelake-dark-rain-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-00-00-00.jpg
+- name: beach-rocks-beach-rocks-currents-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-umberto-bocc.jpg
+- name: wind-mills-windmills-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-circuit.jpg
+- name: oldhousecars-house-old-cars-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-matrix.jpg
+- name: cargo-ship-cargo-ship-on-sea-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-satan-red.jpg
+- name: server-cloud-server-racks-clouds-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-graham-sutherland.jpg
+- name: old-house-oldhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-dream.jpg
+- name: sand-hand-sand-hand-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-rainbow-festival.jpg
 ---
 Which July Fourth Tradition Is Your Favorite?.&nbsp;Motorcyclist IDd In Fatal Crash Near Yankton.&nbsp;Livingston Is A Quiet Composer In A Loud Brassy Band.&nbsp;Most 4th Of July Crashes Involve Alcohol.&nbsp;Daughters Of The American Revolution Honor Two Bixby Students.&nbsp;YIIK Tried To Be A postmodern RPG, But Was Just A Frustrating Mess.&nbsp;Local Tone For Andover's Performances In The Park.&nbsp;City Council Approves Pay Raise At Work Session.&nbsp;
