--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2652,5 +2652,108 @@ stories:
   state: West Virginia
   domain: http://www.cnhi.com/register/
   link: https://www.cnhi.com/home-owner-discovers-burglar-offered-hit-of-meth/article_c7c39b0e-9dc9-11e9-9b90-fb94808d669a.html
+images:
+- name: abandonedbuildings_crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crabapple.jpg
+- name: old-house-oldhouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-green-zuma.jpg
+- name: old-door-lock-old-door-lock-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-two.jpg
+- name: old-gas-pumps-oldgaspumps-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-missle.jpg
+- name: old-cabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
+- name: old-door-lock-old-door-lock-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-atari-missle.jpg
+- name: school-clouds-church-clouds-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-far-away.jpg
+- name: berlinwall2-berlinwall-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-smooth-ride.jpg
+- name: abandonedbuildings_crafty_painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crafty_painting.jpg
+- name: mosaic-face-mosaic-face-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-kandinsky-bv.jpg
+- name: white-house-lawn-white-house-window-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-circuit.jpg
+- name: adam-smith-adam-smith-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sunday.jpg
+- name: old-granary-field-granaryfield.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield.jpg
+- name: fence-gorilla-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-blue-circuit.jpg
+- name: server-cloud-server-racks-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-colorful-blocks.jpg
+- name: berlinwall-DSC-0084-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+- name: desert-dragon-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-diego-rivera1.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+- name: aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
+- name: fence-mexico-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-creativity.jpg
+- name: aws-s3-stories-shipping-energy-trucking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-shipping-energy-trucking.jpg
+- name: border-fence-border-fence-on-hill.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill.jpg
+- name: oldhouse-oldhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-sunday.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
+- name: oldroad-old-road-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-umberto-bocc.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+- name: oldcabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-missle.jpg
+- name: oldsmallboat-oldsmallboat-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-yellow-collage.jpg
+- name: downtown-trucksilo-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-oily-mcoilface.jpg
+- name: old-door-lock-old-door-lock-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-gan-vogh.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
+- name: white-house-lawn-white-house-window-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-alien-goggles.jpg
+- name: crow_purple_pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_pond.jpg
+- name: razorcliff-razorcliff-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-creativity.jpg
+- name: white-house-whitehouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-circuit.jpg
+- name: oldhouse-granaryfield-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-umberto-bocc.jpg
+- name: miamibeach-miamibeach-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-graham-sutherland.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
+- name: gears-4882162452-fa3126b38d-b-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-umberto-bocc.jpg
+- name: liberty-back-statue-liberty-back-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-really-hot.jpg
+- name: oldbarn-oldbarn-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colored-circuits.jpg
+- name: legal-statue-legalstatue-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-hot-spicy.jpg
+- name: aws-s3-royalroads-royalroads-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still-600.jpg
+- name: abandonedbuildings_purp_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purp_paper.jpg
+- name: windowmountain-window-mountain-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-satan-red.jpg
+- name: walled-garden-walled-garden-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-cinnamon-rolls.jpg
+- name: bluelake-oily-mcoilface-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-00-00.jpg
+- name: downtown-trucksilo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-brush.jpg
+- name: supreme-court-supremecourt-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-clean-view.jpg
+- name: castle-wall-DSC-0067-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-sand-paper.JPG
 ---
 Argentina Contemplates Its Future After Another Elimination.&nbsp;Grinding The Coffee Beans.&nbsp;Woodhaven High School Grad Receives Scholarship.&nbsp;On The Eve Of Deployment, A 5K Farewell For Local Veteran.&nbsp;Sharjah Municipality Selects MediaINFO.&nbsp;Mariah Eriksen Earns Social Work Degree.&nbsp;Kingstree Administration Looking To Brand City.&nbsp;Charges Dropped In Phillies' Herrera's Domestic Assault Case.&nbsp;
